# token-optimization

./: .gitignore  Makefile  README.md  pyproject.toml
benchmarks/: README.md  use_case_validation.py
docs/: context-planning-layer.md  context-tooling-landscape.md  prd-developer-workflow.md  real-token-tradeoff-experiment.md  repository-context-research.md  research.md  roadmap.md  use-case-validation.md
examples/: synthetic_oncall_context.json
scripts/: setup.sh
src/agenvantage/: __init__.py  __main__.py  cli.py  config.py  experiment.py  models.py  policies.py  presets.py  repo_context.py  repo_index.py  repo_provenance.py  telemetry.py  tokenizer.py
tests/: test_cli.py  test_config.py  test_models.py  test_policies.py  test_presets.py  test_repo_context.py  test_use_case_validation.py
viz/: index.html
