[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "agenvantage"
version = "0.1.0"
description = "Observable context optimization experiments for reliable AI agents."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
agenvantage = "agenvantage.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

